# pinc

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml
build-cmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  commux_c_4proc  commux_smoke  libpnc.so.0  libpnc.so.0.1.0  libpnetcdf.so.8  libpnetcdf.so.8.0.0  ncmpix_cdf5_4proc
build-cmake/Testing/Temporary/: CTestCostData.txt
build-cmake/src/include/: pnetcdf_comm.h
python/csrc/: pnetcdf_commux.cpp
python/pinc/: __init__.py
python/pnc/: __init__.py
src/comm/: Makefile.am  pinc_comm_commux.c  pinc_comm_mpi.c  pinc_commux_runtime.cpp  pinc_netcdf_io.cpp  pnc_comm_commux.c  pnc_comm_mpi.c  pnc_commux_runtime.cpp  pnc_netcdf_io.cpp
src/include/: pnetcdf_comm.h.in  pnetcdf_commux.h
src/libs/: Makefile.am
test/: commux_c_4proc.c  commux_smoke.c  ncmpix_cdf5_4proc.c  ncmpix_record_4proc.c
